added code to html file

--- a/prework-study-guide/prework-study-guide/index.html
+++ b/prework-study-guide/prework-study-guide/index.html
@@ -12,7 +12,39 @@
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
     </header>
     <main>
-      <!-- Student code goes here -->
+      <section class="card" id="html-section">
+        <h2>HTML</h2>
+     <ul>
+       <li>HTML is used as a starter to give a frame to our webpage</li>
+       <li>The head element contains information about the webpage</li>
+       <li>tThe header appears at the top of the page and always contains a navigation menu</li>
+     </ul>
+    </section>
+      <section class="card" id="css-section">
+        <h2>CSS</h2>
+        <ul>
+          <li>CSS comes after the Html part</li>
+          <li>Css is used to give a style to our webpage</li>
+        </ul>   
+      </section>
+      <section class="card" id="git-section">
+        <h2>Git</h2>
+     <ul>
+       <li>Git can be used in two ways</li>
+       <li>Git can be used as the command line interface</li>
+       <li>Also can be used to create different branches from our main code </li>
+     </ul>
+   
+      </section>
+   
+      <section class="card" id="javascript-section">
+        <h2>Javascript</h2>
+     <ul>
+      <li>Javascript is the thrid cornerstones to the web development</li>
+       <li>Javascript is used to build interactions in the webpage</li>
+     </ul>
+   
+      </section>
     </main>
 
     <footer>
